--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -128,16 +128,18 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-            echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
-            echo -e "====================🧊固件信息🧊=======================\n" \
-                 "➦ 📒 固件名称：Redmi_AX5超级精简(无Wifi)\n" \
-                 "➦ 💻 固件平台：Redmi_AX5\n" \
-                 "➦ ⚽ 固件源码：coolsnowwolf/lede\n" \
-                 "➦ 💝 源码分支：master\n" \
-                 "➦ 🌐 默认地址：192.168.1.1\n" \
-                 "➦ 🔑 默认密码：password" > release.txt
-            echo "status=success" >> $GITHUB_OUTPU
-            
+        echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
+        touch release.txt
+        [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
+        echo -e "====================🧊固件信息🧊=======================\n" \
+             "➦ 📒 固件名称：Redmi_AX5\n" \
+             "➦ 💻 固件平台：Redmi_AX5\n" \
+             "➦ ⚽ 固件源码：coolsnowwolf/lede\n" \
+             "➦ 💝 源码分支：master\n" \
+             "➦ 🌐 默认地址：192.168.1.1\n" \
+             "➦ 🔑 默认密码：password" > release.txt
+        echo "status=success" >> $GITHUB_OUTPUT
+
     - name: Upload firmware to release
       uses: softprops/action-gh-release@master
       if: steps.tag.outputs.status == 'success' && !cancelled()
@@ -147,6 +149,7 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
+  
 
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
