--- a/.config
+++ b/.config
@@ -91,7 +91,7 @@ CONFIG_DEFAULT_e2fsprogs=y
 CONFIG_DEFAULT_firewall=y
 CONFIG_DEFAULT_fstools=y
 CONFIG_DEFAULT_ip-full=y
-CONFIG_DEFAULT_ipq-wifi-xiaomi_rm1800=y
+CONFIG_DEFAULT_ipq-wifi-xiaomi_rm1800=n
 CONFIG_DEFAULT_ipset=y
 CONFIG_DEFAULT_iptables=y
 CONFIG_DEFAULT_iptables-mod-extra=y
@@ -112,9 +112,9 @@ CONFIG_DEFAULT_kmod-qca-nss-drv-vlan=y
 CONFIG_DEFAULT_kmod-qca-nss-ecm=y
 CONFIG_DEFAULT_kmod-qca-ssdk=y
 CONFIG_DEFAULT_kmod-tun=y
-CONFIG_DEFAULT_kmod-usb-dwc3=y
-CONFIG_DEFAULT_kmod-usb-dwc3-qcom=y
-CONFIG_DEFAULT_kmod-usb3=y
+CONFIG_DEFAULT_kmod-usb-dwc3=n
+CONFIG_DEFAULT_kmod-usb-dwc3-qcom=n
+CONFIG_DEFAULT_kmod-usb3=n
 CONFIG_DEFAULT_libc=y
 CONFIG_DEFAULT_libgcc=y
 CONFIG_DEFAULT_libustream-openssl=y
@@ -155,7 +155,7 @@ CONFIG_AUDIO_SUPPORT=y
 CONFIG_GPIO_SUPPORT=y
 CONFIG_PCI_SUPPORT=y
 CONFIG_PCIE_SUPPORT=y
-CONFIG_USB_SUPPORT=y
+CONFIG_USB_SUPPORT=n
 CONFIG_RTC_SUPPORT=y
 CONFIG_USES_DEVICETREE=y
 CONFIG_USES_INITRAMFS=y
@@ -1850,7 +1850,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_ipq-wifi-wallys_dr40x9 is not set
 # CONFIG_PACKAGE_ipq-wifi-xiaomi_ax3600 is not set
 # CONFIG_PACKAGE_ipq-wifi-xiaomi_ax9000 is not set
-CONFIG_PACKAGE_ipq-wifi-xiaomi_rm1800=y
+CONFIG_PACKAGE_ipq-wifi-xiaomi_rm1800=n
 # CONFIG_PACKAGE_ipq-wifi-yuncore_ax880 is not set
 # CONFIG_PACKAGE_ipq-wifi-yuncore_fap650 is not set
 # CONFIG_PACKAGE_ipq-wifi-zte_mf269 is not set
