--- a/.github/workflows/openwrt-builder_wifif.yml
+++ b/.github/workflows/openwrt-builder_wifif.yml
@@ -129,7 +129,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=Redmi_AX5_Wifi$(date +"%y.%m.%d")" >> $GITHUB_OUTPUT
+        echo "release_tag=Redmi_AX5_Wifi(测试版)$(date +"%y.%m.%d")" >> $GITHUB_OUTPUT
         touch release.txt
         [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo -e "====================🧊固件信息🧊=======================\n" \
